--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ label:active:after{
 .background {
 	width:100vw;
 	height: 100vh;
-	background: #fff;
+	background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
 	z-index: -1;
 	position: absolute;
 	transition: 0.3s;
